--- a/we/settings.py.sample
+++ b/we/settings.py.sample
@@ -9,6 +9,12 @@ ADMINS = (
 
 MANAGERS = ADMINS
 
+EMAIL_HOST = 'mail.nou.com.cn'
+EMAIL_HOST_USER = 'we@nou.com.cn'
+EMAIL_HOST_PASSWORD = 'WE_CLOUD'
+EMAIL_SUBJECT_PREFIX = '[We] '
+SERVER_EMAIL = 'we@nou.com.cn'
+
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.WE_CLOUD', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
@@ -72,7 +78,7 @@ STATICFILES_DIRS = (
     # Put strings here, like "/home/html/static" or "C:/www/django/static".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    '/data/git/sites/we/static',
+    '/data/git/we/static',
 )
 
 # List of finder classes that know how to find static files in
@@ -118,7 +124,7 @@ TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    '/data/git/sites/we/templates',
+    '/data/git/we/templates',
 )
 
 INSTALLED_APPS = (
@@ -139,7 +145,9 @@ INSTALLED_APPS = (
     'file',
 )
 
-SESSION_SERIALIZER = 'django.contrib.sessions.serializers.JSONSerializer'
+SESSION_ENGINE = 'django.contrib.sessions.backends.cached_db'
+SESSION_COOKIE_DOMAIN = '.we.neusoft.edu.cn'
+SESSION_COOKIE_NAME = 'we'
 
 # A sample logging configuration. The only tangible logging
 # performed by this configuration is to send an email to
