--- a/we.ini
+++ b/we.ini
@@ -3,8 +3,8 @@ socket=/var/run/we.sock
 listen=1000
 workers=32
 master=True
+log-format=%(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" | %(msecs) ms, %(rss) / %(vsz)
 daemonize=/var/log/uwsgi/we.log
 pidfile=/var/run/we.pid
 chdir=/data/we
 module=we.wsgi:application
-env DJANGO_SETTINGS_MODULE=we.settings
