--- a/we/settings.py.sample
+++ b/we/settings.py.sample
@@ -83,7 +83,7 @@ DATABASES = {
 CACHES = {
     'default': {
         'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
-        'LOCATION': '127.0.0.1:11211',
+        'LOCATION': 'memcache:11211',
         'KEY_PREFIX': 'dev',
     }
 }
