Changing production parameter.

--- a/we.ini
+++ b/we.ini
@@ -6,5 +6,5 @@ master=True
 log-format=%(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)" | %(msecs) ms, %(rss) / %(vsz)
 daemonize=/var/log/uwsgi/we.log
 pidfile=/var/run/we.pid
-chdir=/data/we
+chdir=/data/pub/we
 module=we.wsgi:application
